@@ -239,7 +239,8 @@ if (isset($_REQUEST['form'])) {
 }
 else {
 	$data = array(
-		'displayNodes' => is_array(get_current_nodeid())
+		'displayNodes' => is_array(get_current_nodeid()),
+		'config' => select_config()
 	);
 
 	$sortfield = getPageSortField('host');
